updated sign up and css Co-authored-by: indomiebrand <indomiebrand@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -2,4 +2,20 @@
     width: 993px;
     height: 1134px;
     margin: auto;
+    background-color: black;
+    border-radius: 105px;
 }
+
+body {
+    background-image: url(background.png);
+}
+
+.contactcontainer{
+    display: flex;
+    width: 50%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 1px solid grey;
+  }
