--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("Images/MicrosoftTeams-image (1).png");
+    background-image: url("Images/Background.png");
       background-size: cover;
   }
   
