--- a/style.css
+++ b/style.css
@@ -130,3 +130,14 @@
       font-style: italic;
       font-weight: bold;
   }
+  
+  #animation-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  #login-animation {
+    display:none;
+    
+  } 
