--- a/style.css
+++ b/style.css
@@ -13,6 +13,25 @@
     background-image: url("Images/Background.png");
       background-size: cover;
   }
+  .back-box{
+    height: 52px;
+    margin-top: 21px;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 18px;
+  }
+  .back-box-anchor{
+    height: 100%;
+    width: 25%;
+    padding: 0 50px;
+    font-size: 30px;
+    font-weight: 0;
+    border: 6px solid white;
+    border-radius: 6px;
+    background-color: rgba(255,255,255,0.50);
+    color: transparent;
+    -webkit-text-stroke:1px white;
+  }
   
   .wrapperSignup {
       position: relative;
@@ -141,3 +160,5 @@
     display:none;
     
   } 
+
+ 
