--- a/style.css
+++ b/style.css
@@ -21,13 +21,11 @@
     margin-bottom: 18px;
   }
   .back-box-anchor{
-    height: 100%;
-    width: 25%;
-    padding: 0 50px;
+    padding: 0 60px;
     font-size: 30px;
     font-weight: 0;
-    border: 6px solid white;
-    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    border-radius: 15px;
     background-color: rgba(255,255,255,0.50);
     color: transparent;
     -webkit-text-stroke:1px white;
