--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@
     margin-bottom: 18px;
   }
   .back-box-anchor{
-    padding: 0 60px;
+    padding: 100 60px;
     font-size: 30px;
     font-weight: 0;
     box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     border-radius: 15px;
-    background-color: rgba(255,255,255,0.50);
+    background-color: transparent;
     color: transparent;
     -webkit-text-stroke:1px white;
   }
