--- a/style.css
+++ b/style.css
@@ -321,20 +321,137 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 520px; 
+    width: 520px;
+    height:600px; 
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     height: auto;
-    gap:10px;
+    gap:20px;
 
  }
  .bottomnav img{
-    width:110px;
-    height:130px
+    width:100px;
+    height:120px;
  }
  .bottomnavcontainer{
     position: absolute;
     top:800px;
  }
- 
+ .forumbody{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(Images/Homebackground.png);
+  background-size: cover;
+  }
+  .forumcontainer{
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: darkturquoise;
+    border-radius: 9px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    width:525px;
+    height:900px;
+    position:absolute;
+  }
+  .forumheader{
+    font-size: medium;
+    background-color: white;
+    height: 50px;
+    width: 110px;
+    border-radius: 9px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: relative;
+    margin-bottom: 600px;
+    border-color: darkcyan;
+    margin-top: 70px;
+  }
+
+  .forumpostcontainer{
+    display: flex;
+    position:absolute;
+  }
+  .forumpost{
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    flex-direction: column;
+    width:150px;
+    margin-bottom: 20px;
+  }
+  .forumname{
+    color:darkcyan;
+  }
+  .forumpost img{
+    display:flex;
+    max-width: 100px;
+  }
+ .forumheadercontainer{
+  display:flex;
+  background-color: white;
+  height:200px;
+  width: 525px;
+  border-radius: 9px;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  margin-bottom: 700px
+ }
+ .forumtitle{
+  display:flex;
+  position:absolute;
+  color:darkcyan;
+  margin-right: 350px;
+  margin-top: 10px;
+ }
+ #highlighted{
+  background-color: darkcyan;
+  color:white
+ }
+ a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:focus, a:active {
+  outline: none;
+}
+#post1{
+  margin-bottom:300px;
+  margin-right:300px;
+}
+#post2{
+  margin-right:300px;
+}
+#post3{
+  margin-top:300px;
+  margin-right:300px;
+}
+.ict{
+  background-color: purple;
+  color:white;
+  width:30px;
+  border-radius: 5px;
+}
+.misc{
+  background-color: brown;
+  color:white;
+  width:40px;
+  border-radius:5px;
+}
+.categoryimages{
+  display: flex;
+  flex-direction: column;
+  position:absolute;
+}
