--- a/style.css
+++ b/style.css
@@ -402,18 +402,18 @@
   justify-content: space-evenly;
   align-items: flex-start;
   margin-bottom: 700px
- }
+  }
  .forumtitle{
   display:flex;
   position:absolute;
   color:darkcyan;
   margin-right: 350px;
   margin-top: 10px;
- }
+  }
  #highlighted{
   background-color: darkcyan;
   color:white
- }
+   }
  a {
   text-decoration: none;
   color: inherit;
@@ -454,4 +454,88 @@ a:focus, a:active {
   display: flex;
   flex-direction: column;
   position:absolute;
+}
+.communitycontainer{
+  display:flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-evenly;
+  background-color: orange;
+  border-radius: 9px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  width:525px;
+  height:900px;
+  position:absolute;
+}
+.communitycircle{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color: darkorange;
+  border-radius: 50%;
+  position:absolute;
+  padding:10px;
+  border:2px rgb(159, 103, 0)
+}
+.wrapper {
+  width: 100%;
+  max-width: 31.25rem;
+  margin: 6rem auto;
+}
+
+.label {
+  font-size: .625rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: +1.3px;
+  margin-bottom: 1rem;
+}
+
+.searchBar {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position:absolute;
+  margin-top:-400px;
+  margin-left: 10px;
+}
+
+#searchQueryInput {
+  width: 100%;
+  height: 2.8rem;
+  background: #f5f5f5;
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  font-size: 1rem;
+}
+
+#searchQuerySubmit {
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+#searchQuerySubmit:hover {
+  cursor: pointer;
+}
+.communitytext{
+  color:white;
+  position:absolute;
+}
+.communitycircle img{
+max-width: 100%;
+}
+.communitybutton{
+  position:absolute;
+  display: flex;
+  width:500px;
+  flex-direction: row;
+  overflow:auto;
+  margin-top: 400px;
 }
