--- a/style.css
+++ b/style.css
@@ -305,6 +305,8 @@
     background-color: white;
     padding: 20px;
     border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
   }
   .roomcontainer{
     position:absolute;
@@ -331,8 +333,8 @@
 
  }
  .bottomnav img{
-    width:100px;
-    height:120px;
+    width:110px;
+    height:140px;
  }
  .bottomnavcontainer{
     position: absolute;
@@ -538,4 +540,58 @@ max-width: 100%;
   flex-direction: row;
   overflow:auto;
   margin-top: 400px;
+}
+.leaderboardcontainer{
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: limegreen;
+  border-radius: 9px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  width:525px;
+  height:900px;
+  position:absolute;
+}
+.leaderboardtitle{
+  color:darkgreen;
+  position:absolute;
+}
+.leaderboardtext{
+  color:green;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+}
+.rankingtext{
+  color:lawngreen;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+}
+.leaderboardboard{
+  background-color: white;
+  position:absolute;
+  width:500px;
+  height:400px;
+  border-radius: 15px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  margin-top:150px;
+  overflow: auto;
+}
+.leaderboardpost{
+  max-width: 100px;
+  display: flex;
+  flex-direction: row;
+
+}
+.leaderboardboardtext{
+  display: flex;
+  flex-direction: column;
+}
+.leaderboardpost img{
+  max-width: 100%;
+}
+.fullleaderboard{
+  color:green
 }
